# my_garage

./: .env.example  .gitignore  FILES_CHECKLIST.md  MIGRATION_GUIDE.md  README.md  RESTRUCTURE_PLAN.md  claude.md  design.md  manage.py  models.py  move_files.py  pixi.toml  pyproject.toml  selectors.py  services.py  tasks.py  views.py
.specify/: README.md
.specify/memory/: constitution.md
.specify/specs/001-my-garage-platform/: spec.md
.specify/templates/: spec-template.md
config/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py
django_apps/my_garage/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
django_apps/my_garage/api/: selectors.py  services.py
django_apps/my_garage/templates/my_garage/: dashboard.html
src/: celerybeat-schedule.bak
src/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
src/config/settings/: __init__.py  base.py  production.py  test.py
src/my_garage/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
src/my_garage/api/: selectors.py  serializers.py  services.py  views.py
src/my_garage/migrations/: 0001_initial.py
src/my_garage/templates/my_garage/: vehicle_list.html
src/my_garage/tests/: test_models.py
src/my_garage/utils/: __init__.py  mongo.py
templates/: base.html
templates/pages/: home.html
